# openvmm

./: .gitignore  Cargo.toml  shell.nix
flowey/flowey_lib_common/: Cargo.toml
flowey/flowey_lib_common/src/: ado_task_use_dotnet.rs  cache.rs  cfg_cargo_common_flags.rs  download_azcopy.rs  download_cargo_fuzz.rs  download_cargo_nextest.rs  download_gh_artifact.rs  download_gh_cli.rs  download_gh_release.rs  download_mdbook.rs  download_mdbook_admonish.rs  download_mdbook_mermaid.rs  download_nuget_exe.rs  gen_cargo_nextest_run_cmd.rs  gh_latest_completed_workflow_id.rs  gh_task_azure_login.rs  gh_workflow_id.rs  git_checkout.rs  install_azure_cli.rs  install_dist_pkg.rs  install_dotnet_cli.rs  install_git.rs  install_nodejs.rs  install_rust.rs  lib.rs  nuget_install_package.rs  publish_gh_release.rs  publish_test_results.rs  resolve_protoc.rs  run_cargo_build.rs  run_cargo_clippy.rs  run_cargo_doc.rs  run_cargo_nextest_archive.rs  run_cargo_nextest_run.rs  use_gh_cli.rs
flowey/flowey_lib_common/src/_util/: extract.rs
flowey/flowey_lib_hvlite/: Cargo.toml
flowey/flowey_lib_hvlite/src/: artifact_openhcl_igvm_from_recipe.rs  artifact_to_build_mapping.rs  build_and_test_vmgs_lib.rs  build_guest_test_uefi.rs  build_hypestv.rs  build_igvmfilegen.rs  build_ohcldiag_dev.rs  build_openhcl_boot.rs  build_openhcl_igvm_from_recipe.rs  build_openhcl_initrd.rs  build_openvmm.rs  build_openvmm_hcl.rs  build_openvmm_vhost.rs  build_pipette.rs  build_prep_steps.rs  build_sidecar.rs  build_test_igvm_agent_rpc_server.rs  build_tmk_vmm.rs  build_tmks.rs  build_tpm_guest_tests.rs  build_vmfirmwareigvm_dll.rs  build_vmgstool.rs  build_xtask.rs  cfg_rustup_version.rs  download_openvmm_vmm_tests_artifacts.rs  download_release_igvm_files.rs  download_release_igvm_files_from_gh.rs  download_uefi_mu_msvm.rs  git_checkout_openvmm_repo.rs  init_cross_build.rs  init_openvmm_cargo_config_deny_warnings.rs  init_openvmm_magicpath_linux_test_kernel.rs  init_openvmm_magicpath_openhcl_sysroot.rs  init_openvmm_magicpath_openvmm_deps.rs  init_openvmm_magicpath_release_openhcl_igvm.rs  init_vmm_tests_env.rs  install_git_credential_manager.rs  install_vmm_tests_deps.rs  lib.rs  resolve_openhcl_kernel_package.rs  (+4 more)
flowey/flowey_lib_hvlite/src/_jobs/: build_and_publish_openhcl_igvm_from_recipe.rs  build_and_publish_openvmm_hcl_baseline.rs  build_openhcl_igvm_from_recipe_nix.rs  build_test_results_website.rs  cfg_common.rs  cfg_gh_azure_login.rs  cfg_hvlite_reposource.rs  cfg_nix.rs  cfg_versions.rs  check_clippy.rs  check_openvmm_hcl_size.rs  consolidate_and_publish_gh_pages.rs  consume_and_test_nextest_vmm_tests_archive.rs  local_build_and_run_nextest_vmm_tests.rs  local_build_igvm.rs  local_restore_packages.rs  mod.rs  publish_vmgstool_gh_release.rs
openhcl/hcl_mapper/: Cargo.toml
openhcl/minimal_rt/: Cargo.toml
openhcl/minimal_rt/src/: reloc.rs
openhcl/ohcldiag-dev/: Cargo.toml
openhcl/ohcldiag-dev/src/: main.rs
openhcl/openvmm_hcl/: Cargo.toml
openhcl/openvmm_hcl_resources/: Cargo.toml
openhcl/openvmm_hcl_resources/src/: lib.rs
openhcl/underhill_attestation/: Cargo.toml
openhcl/underhill_attestation/src/: hardware_key_sealing.rs  jwt.rs  key_protector.rs  lib.rs  secure_key_release.rs  test_helpers.rs  vmgs.rs
openhcl/underhill_entry/: Cargo.toml
openhcl/underhill_entry/src/: lib.rs
opentmk/: Cargo.toml
opentmk/src/: tmkdefs.rs
opentmk/src/uefi/: acpi_wrap.rs  init.rs  mod.rs
openvmm/hypervisor_resources/: Cargo.toml
openvmm/hypervisor_resources/src/: lib.rs
openvmm/openvmm_core/: Cargo.toml
openvmm/openvmm_core/src/: hypervisor_backend.rs  lib.rs  partition.rs
openvmm/openvmm_entry/: Cargo.toml
openvmm/openvmm_entry/src/: cli_args.rs  lib.rs  repl.rs  storage_builder.rs  vm_controller.rs
openvmm/openvmm_helpers/: Cargo.toml
openvmm/openvmm_helpers/src/: disk.rs  hypervisor.rs  lib.rs  shared_memory.rs  snapshot.rs
openvmm/openvmm_hypervisors/: Cargo.toml
openvmm/openvmm_hypervisors/src/: hvf.rs  kvm.rs  lib.rs  mshv.rs  whp.rs
openvmm/openvmm_resources/: Cargo.toml
openvmm/openvmm_resources/src/: lib.rs
openvmm_vhost/openvmm_vhost/: Cargo.toml
openvmm_vhost/openvmm_vhost/src/: main.rs
openvmm_vhost/vhost_user_backend/: Cargo.toml
openvmm_vhost/vhost_user_backend/src/: lib.rs  memory.rs  queue_setup.rs
petri/: Cargo.toml
petri/burette/: Cargo.toml
petri/burette/src/: harness.rs  iperf_helper.rs  main.rs  report.rs
petri/guest-bootstrap/: user-data-no-agent
petri/logview/: README.md  index.html  inspect.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.css  vite.config.ts
petri/logview/src/: branch_quick_filters.tsx  menu.tsx  search.tsx  tests.tsx  verify_prompt.tsx
petri/logview_new/src/: ansi_span.tsx  data_defs.tsx  inspect.tsx  log_viewer.tsx  main.tsx  run_details.tsx  runs.tsx  test_details.tsx  virtualized_table.tsx
petri/petri-tool/src/: main.rs
petri/petri_artifacts_common/src/: lib.rs
petri/petri_artifacts_core/src/: lib.rs
petri/pipette/: Cargo.toml
petri/pipette/src/: agent.rs  execute.rs  init.rs  main.rs  mount.rs  shutdown.rs  trace.rs
petri/pipette_client/src/: lib.rs  process.rs  shell.rs
petri/pipette_protocol/src/: lib.rs
petri/src/: cpio.rs  disk_image.rs  lib.rs  openhcl_diag.rs  requirements.rs  test.rs  tracing.rs  worker.rs
petri/src/vm/: mod.rs
support/console_relay/: Cargo.toml
support/console_relay/src/: lib.rs
support/crypto/: Cargo.toml
support/crypto/src/: lib.rs  win.rs
support/debug_output_tracing/: Cargo.toml
support/debug_output_tracing/src/: lib.rs
support/fast_memcpy/: Cargo.toml
support/fast_memcpy/benches/: perf.rs
support/local_clock/: Cargo.toml
support/local_clock/src/: clock_impls.rs  lib.rs
support/pal/: Cargo.toml
support/pal/pal_async/: Cargo.toml
support/pal/src/: windows.rs
support/sev_guest_device/: Cargo.toml
support/sev_guest_device/sev_guest_device_tio/: Cargo.toml
support/sev_guest_device/src/: lib.rs
support/tdx_guest_device/: Cargo.toml
support/trycopy/: Cargo.toml
tmk/simple_tmk/: Cargo.toml
xsync/: Cargo.toml
(+1001 files in other folders)
