# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "petri"
edition.workspace = true
rust-version.workspace = true

[dependencies]
pipette_client.workspace = true

petri_artifacts_common.workspace = true
petri_artifacts_core.workspace = true
petri_artifacts_vmm_test.workspace = true
chipset_resources.workspace = true
chipset_device_worker_defs.workspace = true
diag_client.workspace = true
disk_backend.workspace = true
disk_vhd1.workspace = true
openvmm_defs.workspace = true
openvmm_helpers.workspace = true
openvmm_pcat_locator.workspace = true
hyperv_ic_resources.workspace = true
hyperv_secure_boot_templates.workspace = true
gdma_resources.workspace = true
vmbus_serial_resources.workspace = true
underhill_confidentiality.workspace = true
vtl2_settings_proto.workspace = true
disk_backend_resources.workspace = true
framebuffer.workspace = true
get_resources.workspace = true
ide_resources.workspace = true
memory_range.workspace = true
net_backend_resources.workspace = true
netvsp_resources.workspace = true
nvme_resources.workspace = true
scsidisk_resources.workspace = true
serial_core.workspace = true
serial_16550_resources.workspace = true
serial_socket.workspace = true
storvsp_resources.workspace = true
tpm_resources.workspace = true
uidevices_resources.workspace = true
video_core.workspace = true
virtio_resources.workspace = true
vmbfs_resources.workspace = true
vmcore.workspace = true
vm_manifest_builder.workspace = true
vm_resource.workspace = true
vmgs_format.workspace = true
vmgs_resources.workspace = true
vmm_core_defs.workspace = true
vmotherboard.workspace = true
vmsocket.workspace = true

hvdef.workspace = true
safe_intrinsics.workspace = true
x86defs.workspace = true
guid.workspace = true
inspect = { workspace = true, features = ["initiate"] }
kmsg.workspace = true
mesh_process.workspace = true
mesh_worker.workspace = true
mesh.workspace = true
pal_async.workspace = true
pal.workspace = true
powershell_builder.workspace = true
unix_socket.workspace = true
sparse_mmap.workspace = true

anyhow.workspace = true
async-trait.workspace = true
blocking.workspace = true
clap.workspace = true
fatfs = { workspace = true, features = ["std", "alloc"] }
fs-err.workspace = true
fscommon.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
gptman.workspace = true
image = { workspace = true, features = ["png"] }
jiff = { workspace = true, features = ["serde"] }
libtest-mimic.workspace = true
linkme.workspace = true
parking_lot.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
disk_vhdmp.workspace = true
windows-version.workspace = true

[lints]
workspace = true
