# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "flowey_lib_common"
edition.workspace = true
rust-version.workspace = true

[dependencies]
flowey.workspace = true

home.workspace = true
roxmltree.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
target-lexicon = { workspace = true, features = ["serde_support"] }
toml_edit.workspace = true
tempfile.workspace = true
which.workspace = true
xshell.workspace = true

[target.'cfg(unix)'.dependencies]
rlimit.workspace = true

[lints]
workspace = true
