# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "flowey_lib_hvlite"
edition.workspace = true
rust-version.workspace = true

[dependencies]
flowey.workspace = true
flowey_lib_common.workspace = true

powershell_builder.workspace = true
vmm_test_images = { workspace = true, features = ["serde"] }
igvmfilegen_config.workspace = true

anyhow.workspace = true
crossterm = { workspace = true, features = ["events"] }
fs-err.workspace = true
log.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
target-lexicon = { workspace = true, features = ["serde_support"] }
which.workspace = true

[target.'cfg(windows)'.dependencies]
crossterm = { workspace = true, features = ["windows"] }

[lints]
workspace = true
