# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "ohcldiag-dev"
edition.workspace = true
rust-version.workspace = true

[dependencies]
diag_client.workspace = true

clap_dyn_complete.workspace = true
inspect.workspace = true
mesh.workspace = true
pal_async.workspace = true
term.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
ctrlc.workspace = true
fs-err.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
kmsg.workspace = true
thiserror.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicycle.workspace = true

[target.'cfg(windows)'.dependencies]
pal.workspace = true
socket2.workspace = true

[lints]
workspace = true

[package.metadata.xtask.house-rules]
allow-dash-in-name = true # emits a binary, where kebab-case is more natural
