# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "underhill_attestation"
edition.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
crypto.workspace = true
guest_emulation_transport.workspace = true
openhcl_attestation_protocol.workspace = true
vmgs = { workspace = true, features = ["encryption"] }
get_protocol.workspace = true
guid.workspace = true
mesh.workspace = true
tee_call.workspace = true
pal_async.workspace = true
tracing.workspace = true
cvm_tracing.workspace = true

base64.workspace = true
base64-serde.workspace = true
constant_time_eq.workspace = true
getrandom.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
static_assertions.workspace = true
thiserror.workspace = true
zerocopy.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
disklayer_ram.workspace = true
disk_backend.workspace = true
vmgs = { workspace = true, features = ["encryption", "test_helpers"] }
vmgs_format.workspace = true
guest_emulation_transport = { workspace = true, features = ["test_utilities"] }
guest_emulation_device.workspace = true
test_with_tracing.workspace = true
user_driver_emulated_mock.workspace = true

[lints]
workspace = true
