# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "underhill_entry"
edition.workspace = true
rust-version.workspace = true

[features]
# Enable gdbstub support.
gdb = ["underhill_core/gdb"]

# Enable profiler support.
profiler = ["underhill_core/profiler"]

# Enable profiler tracing (heap profiling) support.
mem-profile-tracing = ["dep:dhat", "underhill_core/mem-profile-tracing"]

# Enable vpci support.
vpci = ["underhill_core/vpci"]

# Enable TIO support for SEV-SNP
dev_snp_ohcl_tio_support = ["underhill_core/dev_snp_ohcl_tio_support"]

[target.'cfg(target_os = "linux")'.dependencies]
underhill_core.workspace = true
underhill_init.workspace = true
underhill_crash.workspace = true
underhill_dump.workspace = true

openssl_crypto_only.workspace = true

anyhow.workspace = true
fast_memcpy = { workspace = true, features = ["replace_system_memcpy"] }
mimalloc.workspace = true
dhat = { workspace = true, optional = true }

[lints]
workspace = true
