# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "burette"
edition.workspace = true
rust-version.workspace = true

[dependencies]
petri.workspace = true
petri_artifacts_common.workspace = true
petri_artifacts_core.workspace = true
petri_artifacts_vmm_test.workspace = true
petri_artifact_resolver_openvmm_known_paths.workspace = true

openvmm_defs.workspace = true
pal_async.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
jiff.workspace = true
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tempfile.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[build-dependencies]
build_rs_git_info.workspace = true

[lints]
workspace = true
