# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "burette"
edition.workspace = true
rust-version.workspace = true

[dependencies]
petri.workspace = true
petri_artifacts_common.workspace = true
petri_artifacts_core.workspace = true
petri_artifacts_vmm_test.workspace = true
petri_artifact_resolver_openvmm_known_paths.workspace = true
disk_backend_resources.workspace = true
guid.workspace = true
openvmm_defs.workspace = true
openvmm_helpers.workspace = true
pal_async.workspace = true
virtio_resources.workspace = true
vm_resource.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
fs-err.workspace = true
futures.workspace = true
jiff.workspace = true
mesh.workspace = true
mesh_process.workspace = true
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tempfile.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
net_backend_resources.workspace = true
net_tap.workspace = true
netvsp_resources.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[build-dependencies]
build_rs_git_info.workspace = true

[lints]
workspace = true
