# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "console_relay"
edition.workspace = true
rust-version.workspace = true

[dependencies]
pal_async.workspace = true
term.workspace = true

anyhow.workspace = true
futures.workspace = true
getrandom.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
unix_socket.workspace = true

[lints]
workspace = true
