# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "crypto"
edition.workspace = true
rust-version.workspace = true

[features]
ossl_vendored = ["openssl/vendored"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
openssl.workspace = true 

[target.'cfg(windows)'.dependencies]
wchar.workspace = true
windows = { workspace = true, features = ["Win32_Foundation","Win32_Security_Cryptography"] }
windows-result.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
