# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "crypto"
edition.workspace = true
rust-version.workspace = true

[features]
# If the chosen backend supports it, vendor it.
# If the chosen backend is natively available, this feature is a no-op.
# If the chosen backend is not natively available and can't be vendored, this will trigger a compile error.
vendored = ["openssl/vendored"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
openssl_kdf.workspace = true
openssl.workspace = true

[target.'cfg(windows)'.dependencies]
wchar.workspace = true
windows = { workspace = true, features = ["Win32_Foundation","Win32_Security_Cryptography"] }
windows-result.workspace = true
zerocopy.workspace = true

[dev-dependencies]
hex.workspace = true

[lints]
workspace = true
