# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "debug_output_tracing"
edition.workspace = true
rust-version.workspace = true

[target.'cfg(windows)'.dependencies]
smallvec.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows-sys = { workspace = true, features = ["Win32_System_Diagnostics_Debug"] }

[lints]
workspace = true
