# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "tdx_guest_device"
edition.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
zerocopy.workspace = true
nix = { workspace = true, features = ["ioctl"] }
thiserror.workspace = true
x86defs.workspace = true

[lints]
workspace = true
